--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -200,3 +200,15 @@ doi = "https://doi.org/10.1016/j.apenergy.2011.03.013",
 url = "http://www.sciencedirect.com/science/article/pii/S030626191100170X",
 author = "Cezar O.R. Negrão and Christian J.L. Hermes",
 }
+
+@book{list,
+author = {Roa, Laura and Prado-Velasco, Manuel},
+year = {2006},
+month = {04},
+title = {Simulation Languages},
+volume = {8},
+isbn = {9780471740360},
+journal = {Wiley Encyclopedia of Biomedical Engineering},
+doi = {10.1002/9780471740360.ebs1089},
+publisher = {Wiley-Interscience}
+}
