--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -1,23 +1,23 @@
 %===============================================================================
 \chapter{Úvod}
 
-Dnešní doba poskytuje mnoho možností, jak si svůj vyvíjený produkt, nebo například jen pouhou hypotézu toho, jak by nějaký systém mohl fungovat, namodelovat a provést na tomto modelu simulaci \cite{NEGRAO20113051}. Z~takto provedené simulace získáme představu o~tom, jak se náš produkt chová. A~pro tyto simulace je potřeba zvolit vhodný simulační nástroj. Vhodně zvolený simulační nástroj může totiž ušetřit nemalé prostředky při uvedení produktu na trh právě díky proběhnutí simulací a odlazením celého procesu chodu produktu \cite{cohen2010cost}. Proto je vhodné věnovat čas simulaci dostatečný čas. Simulační nástroje jsou implementovány nad různými jazyky, ale pro účely práce byly zvoleny primárně dvě hlavní rodiny jazyků - MATLAB a Modelica, případně jazyky, které jsou na nich založené a jsou většinově kompatibilní. Zároveň je pro porovnání vybrán jazyk Python s~rozšířeními SciPy a NumPy, který není příbuzný s~výše uvedenými jazyky.
+Dnešní doba poskytuje mnoho možností, jak si svůj vyvíjený produkt, nebo například jen pouhou hypotézu toho, jak by nějaký systém mohl fungovat, vytvořit model a provést na tomto modelu simulaci \cite{NEGRAO20113051}. Z~takto provedené simulace získáme představu o~tom, jak se testovaný produkt chová. To nám společně s vhodně zvoleným simulačním nástrojem může ušetřit nemalé finanční prostředky při uvádění produktu na trh, neboť simulace mohou pomoci odhalit nedostatky, které je potřeba odladit \cite{cohen2010cost}. Proto je vhodné věnovat čas simulaci dostatečný čas. Simulační nástroje jsou implementovány nad různými jazyky, ale pro účely práce byly zvoleny primárně dvě hlavní rodiny jazyků - MATLAB a Modelica, a také jazyky, které jsou na nich založené a jsou většinově kompatibilní. Zároveň je pro porovnání vybrán jazyk Python s~rozšířeními SciPy a NumPy, který není příbuzný s~výše uvedenými jazyky.
 
-Cílem této bakalářské práce je provést srovnání volně dostupných simulačních nástrojů. Pro účely porovnání budou implementovány simulační modely v~různých simulačních jazycích. Tyto modely budou následně porovnány pomocí porovnávací metodiky a získané výsledky srovnání budou použity k~pojednání o~vhodnosti použití implementovaných modelů pro zvolené nástroje.
+Cílem této bakalářské práce je provést srovnání volně dostupných simulačních nástrojů. Pro účely porovnání byly implementovány simulační modely v~různých simulačních jazycích. Tyto modely byly následně porovnány pomocí porovnávací metodiky a získané výsledky srovnání byly zhodnoceny z hlediska vhodnosti použití implementovaných modelů pro zvolené nástroje \cite{jones2004traffic}.
 
-V~kapitole \ref{kapitola2} budou popsány a vysvětleny důležité pojmy potřebné pro pochopení problematiky modelování a simulací. Zároveň v~této kapitole bude vysvětlena problematiky porovnání a popsána zvolená porovnávací metodika. Dále bude kapitola pojednávat o~použitých simulačních nástrojích a jejich jazycích. Kapitola \ref{kapitola4} bude obsahovat popis implementovaných simulačních modelů pro simulační nástroje. Společně s implementací bude v této kapitole popsána porovnávací metodika. Poslední kapitola \ref{kapitola5} bude obsahovat výsledky porovnání simulačních nástrojů zároveň s~popisem způsobilosti použitých modelů pro využité nástroje.
+V~kapitole \ref{kapitola2} jsou popsány a vysvětleny důležité pojmy potřebné pro pochopení problematiky modelování a simulací. Dále kapitola pojednává o zvolených programovacích jazycích. Kapitola \ref{kapitola3} obsahuje jednoduché rozdělení použitých nástrojů a jejich bližší popis. Kapitola \ref{kapitola4} se zabývá popisem implementovaných simulačních modelů pro simulační nástroje. Společně s implementací je v této kapitole vysvětlena porovnávací metodika, která je následně využita v kapitole \ref{kapitola5}, která obsahuje výsledky porovnání simulačních nástrojů zároveň s~popisem způsobilosti použitých modelů pro využité nástroje podle zvolené metodiky.
 
 \chapter{Modelování a simulace}
 \label{kapitola2}
 
-Modelování a simulace jsou dnes již nedílnou součástí vědy a výzkumu. Tato kapitola se věnuje vysvětlení pojmů nutných k pochopení základní problematiky modelování a simulací. Dále lze v kapitole nalézt popis výhod a nevýhod použití simulací. Poslední podkapitola se věnuje popisu programovacích jazyků využitých pro účely bakalářské práce.
+Modelování a simulace jsou dnes již nedílnou součástí vědy a výzkumu. Tato kapitola se věnuje vysvětlení pojmů nutných k pochopení základní problematiky modelování a simulací. Dále lze v kapitole nalézt výčet výhod a nevýhod použití simulací. Poslední podkapitola se věnuje popisu programovacích jazyků využitých pro účely bakalářské práce.
 
 \section{Problematika modelování a simulací}
-Jelikož jsou modelování a simulace velmi komplexní disciplíny, je nutné si stanovit, alespoň v~jednoduchosti, základní pojmy, které jsou v~rámci této práce využívány.
+Jelikož jsou modelování a simulace velmi komplexní disciplíny, je nutné definovat, alespoň v~jednoduchosti, základní pojmy, které jsou v~rámci této práce využívány.
 
 \subsection{Modelování a model}
 \label{modelovani}
-Modelování je vědecká disciplína, při které dochází k~popisu systému většinou z~reálného světa a získání všech možných informací, které k~tomuto systému máme. Ze získaných poznatků se vytvoří model. V~rámci zkoumání získaných informací je nutná analýza možných nepochopitelných a nepopsatelných vlastností modelu. Model je tedy jen přiblížení se ke skutečnosti, nikoliv její dokonalý odraz. Modely lze dělit podle jejich chování na:
+Modelování je vědecká disciplína, při které popisujeme systém většinou z~reálného světa a získáváme tak všechny možné informace, které k~tomuto systému máme. Ze získaných poznatků vytváříme model. V~rámci zkoumání získaných informací je nutná analýza možných nepochopitelných a nepopsatelných vlastností modelu. Model je tedy jen přiblížení skutečnosti, nikoliv její dokonalý odraz. Modely lze dělit podle jejich chování na \cite{IMS-skripta}:
 
 \begin{itemize}
     \item spojité -- hodnoty modelu se v~průběhu simulace mění spojitě. Tyto modely jsou popsatelné diferenciálními rovnicemi
@@ -25,12 +25,12 @@ Modelování je vědecká disciplína, při které dochází k~popisu systému v
     \item kombinované -- tyto modely obsahují společně spojité a diskrétní složky vedle sebe
 \end{itemize}
 
-V~literatuře můžeme nalézt další možné rozdělení modelů \cite{IMS-skripta}.
+V~literatuře můžeme nalézt další možné rozdělení modelů \cite{Cellierc2006}.
 \newline
 
 S~takto popsanými modely je pak možné vykonávat simulace. Během simulace se pozoruje chování modelu, vyhodnocují se výsledky simulací a případně se mění popis modelu, pokud to vyžaduje simulace, nebo pokud se přijde na nové, nečekané chování.
 
-Model je také možné vytvářet pomocí tzv. "nereálného"\space systému. Takové systémy jsou často k~nalezení v~počítačových hrách, případně ve vědeckých oborech, kde jsou získané poznatky o~systému velmi omezené.
+Model je také možné vytvářet pomocí tzv. nereálného systému. Takové systémy jsou často k~nalezení v~počítačových hrách, případně ve vědeckých oborech, kde jsou získané poznatky o~systému velmi omezené.
 
 \subsection{Systém}
 Systém je možno definovat jako soustavu částic, které na sebe vzájemně působí. Systémy se mohou dělit na:
@@ -67,65 +67,71 @@ Simulace můžeme rozdělovat podle mnoha kritérii:
             \item Paralelní a distribuovaná simulace -- simulace probíhá na více strojích zároveň. Pomocí dílčího rozdělení výpočtů můžeme dosáhnout značného zrychlení v~případě složitých simulací, např. lety do kosmu.
         \end{itemize}
 \end{enumerate}
-Další a mnohá rozdělení simulací můžeme nalézt v~literatuře. Pro účely různých druhů simulací jsou rozdělení jiná, nemluvě o~dynamickém vývoji tohoto odvětví a tudíž i neustálým změnám v~rozdělení simulací.
+Další a mnohá rozdělení simulací můžeme nalézt v~literatuře \cite{IMS-skripta}. Pro účely různých druhů simulací jsou rozdělení jiná, nemluvě o~dynamickém vývoji tohoto odvětví a tudíž i neustálým změnám v~rozdělení simulací.
 
-V této bakalářské práci se věnuji pouze simulacím spojitým a kombinovaným. Diskrétní simulace, které simulují například systémy hromadné obsluhy, výrobní linky a obchody, v této bakalářské práci řešeny nebudou. 
+V této práci se věnuji pouze simulacím spojitým a kombinovaným. Diskrétní simulace, které simulují například systémy hromadné obsluhy, výrobní linky a obchody, v této bakalářské práci řešeny nebudou z důvodu velké odlišnosti a rozsahu práce. 
 
 \section{Postup modelování a simulace}
-Jak už bylo řečeno v~kapitole \ref{modelovani}, modely jsou tvořeny pomocí pozorování systému a získávání poznatků o~něm. Pro účely popisu tvoření modelu budeme vycházet z~předpokladu, že pozorujeme tzv. "reálný"\space systém. Na základě získaných reálií o~systému vytvoříme abstraktní model, který je vlastně "zjednodušenina" pozorovaného systému, díky tomu, že pracujeme pouze s~daty, která získáme pomocí pozorování. Takto vytvořený model může být popsán například diferenciálními rovnicemi.
+Jak už bylo řečeno v~kapitole \ref{modelovani}, modely jsou tvořeny pomocí pozorování systému a získávání poznatků o~něm. Pro účely popisu tvoření modelu budeme vycházet z~předpokladu, že pozorujeme tzv. reálný systém. Na základě získaných reálií o~systému vytvoříme abstraktní model, který je vlastně "zjednodušenina"\space pozorovaného systému, díky tomu, že pracujeme pouze s~daty, která získáme pomocí pozorování. Takto vytvořený model může být popsán například diferenciálními rovnicemi.
 
 Z~takto popsaného abstraktního modelu dále vytvoříme simulační model. Simulační model je vlastně přepis abstraktního modelu do programovacího jazyka tak, abychom byli schopni s~tímto modelem provádět měření a experimenty. Simulační model je tedy program/skript, který počítá výsledky podle zadaných vstupních hodnot, počátečního stavu, parametrů modelu a případných proměnných.
 
-S~výsledky získanými ze simulačního modelu získáváme další poznatky o~chování abstraktního modelu. Tyto získané výsledky můžeme využít pro upravení abstraktního modelu, následně upravení simulačního modelu podle modelu abstraktního a opětovnému provedení simulace \cite{IMS-skripta}.
+S~výsledky získanými ze simulačního modelu získáváme další poznatky o~chování abstraktního modelu. Tyto získané výsledky můžeme využít pro úpravu abstraktního modelu, následnou úpravu simulačního modelu podle modelu abstraktního a na závěr opětovné provedení simulace \cite{IMS-skripta}.
 
-Výsledky je vhodné vizualizovat tak, abychom mohli s~nimi dále pracovat a analyzovat je. V~rámci analýzy je potřeba rozlišit s~jakým typem dat pracuji a podle toho zvolit metodu, pomocí které budu analýzu provádět. Mezi běžné druhy analýzy výsledků patří:
+Výsledky je vhodné vizualizovat tak, abychom s nimi mohli dále pracovat a analyzovat je. V~rámci analýzy je potřeba rozlišit, s~jakým typem dat pracujeme, a podle toho zvolit metodu, pomocí které budeme analýzu provádět. Mezi běžné druhy analýzy výsledků patří:
 \begin{itemize}
     \item Porovnání získaných výsledků s~reálnými naměřenými daty daného systému
     \item Použití statistických metod pro zpracování výsledků
     \item Automatické vyhodnocení výsledků simulace podle metodiky zvoleného simulačního nástroje
 \end{itemize}
 
-V~rámci simulace můžeme sledovat i hodnoty, které nepřímo souvisí s~výsledkem simulace. Mezi tyto hodnoty patří například:
+V~rámci simulace můžeme sledovat i hodnoty, které s~výsledkem simulace souvisí nepřímo. Mezi tyto hodnoty patří například:
 \begin{itemize}
-    \item Strojový čas -- čas po který simulace využívá výpočetní stroj
+    \item Strojový čas -- čas, po který simulace využívá výpočetní stroj
     \item Přesnost numerické metody -- mění se v~závislosti na použité numerické metodě
     \item Alokace zdrojů při simulaci -- využití fyzických a virtuálních zdrojů výpočetního stroje
 \end{itemize}
 
-Část z~těchto proměnných budeme sledovat v~rámci této bakalářské práce. Popis sledování a následného porovnání lze nalézt v~kapitole \ref{kapitola4}.
+%===========================================
+
+Část z~těchto proměnných budeme sledovat v~rámci naší analýzy. Popis sledování lze nalézt v  \ref{kapitola4} a následné porovnání se nachází v~kapitole \ref{kapitola5}.
 
 \section{Výhody a nevýhody využití simulací}
 
-Jako všechny procesy, tak i simulace mají své pozitivní i negativní vlastnosti. V~jednoduchosti se dá říct, že simulace šetří čas a peníze, ale na druhou stranu mohou stát mnoho zdrojů (peníze a čas) pro to, aby vůbec byly vytvořeny a uskutečněny podle reálného podkladu.
+Jako všechny procesy, tak i simulace mají své pozitivní i negativní vlastnosti. V~jednoduchosti se dá říct, že simulace šetří čas a peníze, na druhou stranu však mohou stát mnoho zdrojů (peněz i času) pro to, aby vůbec byly vytvořeny a provedeny podle reálného podkladu.
+
+\section{Výhody a nevýhody využití simulací}
+
+Jako všechny procesy, tak i simulace mají své pozitivní i negativní vlastnosti. V~jednoduchosti se dá říct, že simulace šetří čas a peníze, na druhou stranu však mohou stát mnoho zdrojů (peněz i času) pro to, aby vůbec byly vytvořeny a provedeny podle reálného podkladu.
 
 \subsection{Výhody využití simulací}
 \label{vyhody}
-Jak už bylo zmíněno výše, hlavními výhodami jsou ušetření času a ceny experimentu. Dále to pak mohou být bezpečnost, replikovatelnost a rychlost. Bližší popis výhod:
+Jak už bylo zmíněno výše, mezi hlavní výhody patří  ušetřený čas a finanční prostředky potřebné pro provedení experimentu. Kromě nich však můžeme zmínit ještě bezpečnost, replikovatelnost a rychlost. Bližší popis výhod:
 
 \begin{enumerate}
-    \item Cena je v~dnešní době velmi důležitým faktorem pro potřeby simulací, protože experimenty s~reálným systémem mohou být velmi drahé. Díky využití modelů a simulací je možné výrazně ušetřit na výrobě testovacích kusů. Toto je velmi patrné například v~leteckém průmyslu - reálné systémy (letadla, jejich komponenty) se zde využívají až pro validaci výsledků předchozích simulací.
-    \item Rychlost je dalším z~kritérií pro běh simulací. V~závislosti na výkonu výkonu stroje, který simulaci vykonává, můžeme simulaci zpomalovat a zrychlovat dle našich potřeb. Důležitým faktorem je zde výkon výpočetního zdroje, který nám omezuje maximální (minimální) rychlost simulace. Dobrým příkladem pro nutnost zrychlování simulace je sledování pohybu litosferických desek. Tento pohyb je v~reálném systému velmi pomalý, ale pokud máme dostatečně výkonný výpočetní stroj, můžeme simulaci zrychlit a dosáhnout výsledků o~mnoho dříve.
-    \item Replikovatelnost je faktor, který velmi úzce souvisí s~cenou simulace. Pomocí simulace můžeme provést výpočty na jednom modelu prakticky nekonečně mnohokrát bez potřeby využití reálného systému. Pomocí replikovatelnosti jsme schopni dosáhnout přesnějších výsledků a tím pádem i větši znalosti vlastností objektů \cite{belanger2010and}.
-    \item Bezpečnost je další faktor, který je velkou výhodou využití simulací. Některé experimenty s~reálnými systémy není možné z~bezpečnostních důvodů vůbec provádět - například crash testy letadel, nebo simulace chemických a jaderných reakcí, případně simulace epidemií různých nemocí.
-    \item V~neposlední řadě je to možnost experimentovat se systémy, které můžeme blíže zkoumat právě jen díky provádění simulací s~nimi - například kolize vesmírných těles, působení černých děr \cite{Fragile_2007}, apod.
+    \item Cena zakázky je v~dnešní době velmi důležitým faktorem pro potřeby simulací, protože experimenty s~reálným systémem mohou být velmi nákladné. Díky využití modelů a simulací je možné výrazně ušetřit na výrobě testovacích kusů. Toto je dobře patrné například v~leteckém průmyslu - reálné systémy (letadla nebo jejich komponenty) se zde využívají až pro validaci výsledků předchozích simulací.
+    \item Rychlost je dalším z~kritérií pro běh simulací. V~závislosti na výkonu výkonu stroje, který simulaci vykonává, můžeme simulaci zpomalovat a zrychlovat dle našich potřeb. Důležitým faktorem je zde výkon výpočetního zdroje, který nám omezuje maximální (minimální) rychlost simulace. Dobrým příkladem pro nutnost zrychlování simulace je sledování pohybu litosferických desek. Tento pohyb je v~reálném systému velmi pomalý, ale pokud máme dostatečně výkonný výpočetní stroj, můžeme simulaci zrychlit a dosáhnout výsledků mnohem rychleji.
+    \item Replikovatelnost je faktor, který velmi úzce souvisí s~cenou simulace. Pomocí simulace můžeme provést výpočty na jednom modelu prakticky nekonečněkrát bez potřeby využití reálného systému. Pomocí replikovatelnosti jsme schopni dosáhnout přesnějších výsledků a tím pádem i větší znalosti vlastností objektů \cite{belanger2010and}.
+    \item Bezpečnost je další faktor, který je velkou výhodou využití simulací. Některé experimenty s~reálnými systémy není možné z~bezpečnostních důvodů vůbec provádět - například crash testy letadel, simulace chemických a jaderných reakcí, nebo simulace epidemií různých nemocí.
+    \item V~neposlední řadě je to možnost experimentovat se systémy, které můžeme blíže zkoumat právě jen díky provádění simulací s~nimi - například kolize vesmírných těles, působení černých děr, apod. \cite{Fragile_2007}.
 \end{enumerate}
 
-Tento výpis výhod simulací rozhodně není konečný. Je velmi pravděpodobné, že se v~blízké době objeví další velká výhoda tohoto procesu. Jelikož výpočetní výkon počítačů neustále roste podle Moorova zákona \cite{Schaller1997}, časem bude možné provádět experimenty s~daleko složitějšími modely než doposud. Výsledky simulací se využívají mimo vědu také pro populárně naučné účely, případně pro potřeby využití ve filmovém a herním průmyslu \cite{James_2015}.
+Tento výčet výhod simulací však není konečný. Je velmi pravděpodobné, že se v~blízké době objeví další velká výhoda tohoto procesu. Jelikož výpočetní výkon počítačů neustále roste podle Moorova zákona \cite{Schaller1997}, časem bude možné provádět experimenty s~daleko složitějšími modely než doposud. Výsledky simulací se využívají mimo vědu také pro populárně naučné účely, případně pro potřeby využití ve filmovém a herním průmyslu \cite{James_2015}.
 
 \subsection{Nevýhody využití simulací}
 
-Stejně tak, jako simulace mohou šetřit naše zdroje, při nesprávném vymodelování modelu, případně nesprávném zavedení simulací, se mohou velmi prodražit a prodloužit časy simulací. Se simulacemi se samozřejmě pojí více problémů, než jen peníze a čas:
+Stejně tak, jako simulace mohou naše zdroje šetřit, při nesprávné tvorbě modelu, případně nesprávném zavedení simulací, se mohou modely velmi prodražit a prodloužit časy simulací. Se simulacemi se samozřejmě pojí více rizik, než jsou finance a čas:
 
 \begin{enumerate}
-    \item Velké nároky na výpočetní výkon je běžný problém všech výpočetních operací. S~rostoucími nároky na rychlost a výsledky simulací přímo uměrně roste také nárok na výkon simulačního stroje. Nicméně díky zvětšování výkonu v~závislosti na Moorovu zákonu, viz kapitola \ref{vyhody}, je možné provádět složitější výpočetní operace i na běžných osobních počítačích a ne pouze na sálových superpočítačích, jako tomu bylo dříve.
+    \item Mezi běžné problémy všech výpočetních operací patří bezesporu velké nároky na výpočetní výkon.. S~rostoucími nároky na rychlost a výsledky simulací přímo uměrně roste také nárok na výkon simulačního stroje. Nicméně díky zvětšování výkonu v~závislosti na Moorovu zákonu, viz kapitola \ref{vyhody}, je možné provádět složitější výpočetní operace i na běžných osobních počítačích a ne pouze na sálových superpočítačích, jako tomu bylo dříve.
     \item Během simulace může docházet k~chybám kvůli nevhodně zvolené numerické metodě, případně kvůli její nepřesnosti řešení. Tento stav dokáže ovlivnit i relativně bezchybně namodelovaný model a znehodnotit tak výsledky z~experimentů s~ním.
     \item Velká časová náročnost v~případě, že chceme simulaci provést vícekrát. Tento problém je spjatý i s~nároky na výpočetní výkon -- je-li výkon dostatečný, můžeme simulaci urychlit a tím i zkrátit čas simulace.
-    \item Velmi důležitým problémem je problém ověřování validity. Pokud máme chybně namodelovaný model, pak výsledky simulace obsahují také chyby a tedy model není validní. Ověřování validity modelu by mělo proběhnout ještě před provedením simulace, tak, abychom předešli jeho následnému přemodelování.
+    \item Velmi důležitým problémem je problém ověřování validity. Pokud máme chybně namodelovaný model, pak výsledky simulace obsahují také chyby a tedy model není validní. Ověřování validity modelu by mělo proběhnout ještě před provedením simulace, tak, abychom předešli následnému přepracování modelu.
 \end{enumerate}
 
 Stejně jako u~výhod simulací v~kapitole \ref{vyhody} není tento výčet konečný. Další velkou nevýhodou je například vysoká složitost vytvoření modelu. A~stejně jako u~výhod, i zde je velmi pravděpodobné, že se další velké nevýhody budou objevovat s~přibývajícím časem.
 
-\section{Popis použitých jazyků}
+\section{Charakteristiky použitých jazyků}
 \label{popis-jazyky}
 Jazyků umožňujících vytváření a specifikaci modelů a provádení experimentů s~nimi je na trhu nepřeberné množství \cite{list-of-process-modelling-lang}. Tyto jazyky se také liší v~případech využití - pro různé typy modelů a simulací systémů jsou jinak vhodné. Pro potřeby bakalářské práce jsem si zvolil tři programovací jazyky, z~toho dva z~kategorie jazyků, které jsou využívány vybranými volně dostupnými simulačními nástroji. Nástroje tyto jazyky používají buď v~čisté formě, případně jejich modifikované verze určené pro konkrétní nástroj. Těmito jazyky jsou MATLAB\cite{MATLAB:2010} a Modelica\cite{Fritzson02modelica--}. Jako třetí programovací jazyk byl pro porovnání zvolen jazyk Python s~podporou matematických, vědeckých a simulačních knihoven a knihoven pro tvorbu grafů \cite{scipy}. 
 
@@ -284,9 +290,10 @@ Pro účely této bakalářské práce je využita instalace nástroje Dymola ve
 \subsection{jModelica}
 Jednou z~možných alternativ k~nástroji Dymola je jModelica. Tento nástroj je volně dostupný, otevřený a stejně jako GNU Octave, který byl popsán v~kapitole \ref{octave-desc}, vyvíjený pod licencí GPL. Je jedním z~vyhledávaných alternativ pro nástroj Dymola. Z~obrázků \ref{fig:dymola} a \ref{fig:jmodelica} je patrné, že i grafické rozdíly v~GUI jednotlivých nástrojů nejsou nijak markantní.
 
-jModelica podporuje přímé generování ze zdrojového kódu napsaného v~jazyce Modelica do jazyků C a XML. Tato funkcionalita je velmi přínosná, pokud například chceme využívat nástroj jModelica jen jako modelační prostředek a následné simulace spouštět v~jiném prostředí. Dále také podporuje využití jazyka Python a jeho knihoven.
+jModelica podporuje přímé generování ze zdrojového kódu napsaného v~jazyce Modelica do jazyků C a XML. Tato funkcionalita je velmi přínosná, pokud například chceme využívat nástroj jModelica jen jako modelační prostředek a následné simulace spouštět v~jiném prostředí. Dále také podporuje využití jazyka Python a jeho knihoven. Aplikace má uživatelské rozhraní na bázi příkazové řádky, které je napsáno v jazyce Python. Aplikace sama o sobě grafický editor nemá, lze ho však emulovat pomocí rozšíření do editoru Eclipse \cite{modelica-example}.
 
-Pro potřeby bakalářské práce je využit balík Assimulo\footnote{\url{https://jmodelica.org/assimulo/}}, pomocí kterého je možné řešit diferenciální rovnice. Tento balík funkcí je napsán v~jazyce Python.
+Pro řešení diferenciálních rovnic jModelica používá balík Assimulo\footnote{\url{https://jmodelica.org/assimulo/}}. Tento balík funkcí je napsán v~jazyce Python. 
+
 
 jModelica má volně dostupný repozitář se všemi zdrojovými kódy všech verzí, které byly vydány\footnote{\url{https://svn.jmodelica.org/}}. Zajímavostí je, že jsou přístupné i zdrojové texty verzí, které ještě nejsou oficiálně vydány. Aktuální verze, a také verze na která byla instalována, je verze 2.4, nicméně v repozitáři je dohledatelná i verze 2.8.x, která teprve na svoji stabilní verzi čeká.
 
@@ -329,7 +336,6 @@ V této kapitole bude představena použitá porovnávací metodika, kritéria h
 Předlohou k tvorbě vyhodnocovací metodiky sloužila metodika ke srovnávání nástrojů simulujících dopravní situace na pozemních komunikacích \cite{jones2004traffic}. Původní převzatá metodika sledovala kritéria jako hardware a software náročnost, náročnost na kvalitu vstupních dat a pak další kritéria ve vztahu k použitým nástrojům. Pro účely bakalářské práce byla vybraná metodika modifikována podle potřeb zadání a následně byla vytvořena tato kritéria:
 \begin{itemize}
     \item Strojový čas -- čas, po který simulace běží na výpočetním stroji.
-    \item Přesnost zvolené numerické metody -- k určené přesnosti výpočtu se bude sledovat počet kroků výpočtu. Tyto hodnoty se budou následně porovnávat a hodnotit.
     \item Hardwarové a softwarové požadavky -- v rámci tohoto kritéria bude hodnocena kompatibilita nástrojů napříč standardními platformami (Windows, Linux, MacOS), případně zde budou uvedeny omezení, která vyplynou z instalace a běhu experimentu.
     \item Obtížnost implementace modelu -- u tohoto kritéria lze namítat, že je velmi subjektivní. Obecně lze předpokládat, že pokud budou vybrány základní typy modely pro různé druhy simulací, bude obtížnost implementace nízká, pokud bude jazyk, nebo nástroj, vhodný pro tuto implementaci. V opačném případě bude obtížnost implementace označena jako vysoká.
     \item Obtížnost instalace -- všechny nástroje byly nainstalovány pomocí návodů v oficiálních dokumentacích. Nebylo-li tomu tak, pak v rámci hodnocení obtížnosti instalace jsou uvedena úskalí vyvstalá během instalace.
@@ -375,7 +381,7 @@ Pro implementaci posloužil jako základ kód pro jazyk MATLAB převzatý z ofic
 
 Během implementace v Pythonu se vyskytl problém s detekcí výšky a výpočtu následného odrazu. Původní zvolená metoda \texttt{odeint()} byla vyhodnocena jako nevhodná z důvodu nemožnosti výpočtu derivace rychlosti v bodě $h\leq0$. Po několika neúspěšných pokusech s touto a dalšími metodami byla zvolena metoda \texttt{solve\_ivp()}, která tyto situace umí do jisté míry detekovat a hodnotu derivace vypočítat. Bohužel i při použití této metody vznikají velké nepřesnosti a během trvání výpočtu narůstá chyba výpočtu. Po několika krocích výpočtu se hodnota výšky míčku, místo přibližování se k 0, "propadne"\space do záporných hodnot. Tento jev se vyskytuje právě kvůli kumulované chybě, způsobenou zvolenou metodou.
 
-Při implementaci a následného zkoumání výsledků simulace v jazyce Modelica se jev, kdy se míček "propadne pod zem", objevuje také. Zde je to způsobeno zřejmě přesností výpočtu a následnou práci s velmi malými čisly. Nicméně na průběh výpočtu, navzdory implementace v Pythonu, tento jev nemá vliv na výpočet.
+Při implementaci a následného zkoumání výsledků simulace v jazyce Modelica se jev, kdy se míček "propadne pod zem", objevuje také. Zde je to způsobeno zřejmě přesností výpočtu a následnou práci s velmi malými čisly. Nicméně na průběh výpočtu, navzdory implementace v Pythonu, tento jev nemá vliv.
 
 Výsledky implementovaného modelu a následné srovnání výsledků simulačních nástrojů lze nalézt v kapitole \ref{srovnani-micek}.
 Zvolený model byl implementován pro všechny nástroje popsané v kapitole~\ref{popis-nastroju}.
@@ -419,7 +425,7 @@ V jazyce Python, konkrétně tedy s využitím knihovny SciPy, se během impleme
 
 \todo{modelica - asi bez problemu, nutno dohledat}
 
-Pro implementaci pro nástroje používající jazyk MATLAB byla vybrána metoda \texttt{ode15s()}, která je popisována jako jedna z univerzálnějších metod pro řešení tuhých rovnic a jejich sytémů \cite{MATLAB:2010}. Metoda si stejně, jako u implementace v Pythonu, sama zvolí délku kroku podle zadané rovnice. Dalšími metodami pro řešení tuhých rovnic v MATLABu jsou \texttt{ode23s()}, \texttt{ode23t()} a \texttt{ode23tb()}. MATLAB obsahuje více metod, které jsou schopny řešit tuhé rovnice, například \texttt{ode45()}, nebo \texttt{ode113()}, ale tyto metody jsou označovány za pomalé a jsou primárně doporučovány k řešení netuhých diferenciálních rovnic.
+Pro implementaci pro nástroje používající jazyk MATLAB byla vybrána metoda \texttt{ode15s()}, která je popisována jako jedna z univerzálnějších metod pro řešení tuhých rovnic a jejich sytémů \cite{MATLAB:2010}. Metoda si stejně, jako u implementace v Pythonu, sama zvolí délku kroku podle zadané rovnice. Dalšími metodami pro řešení tuhých rovnic v MATLABu jsou \texttt{ode23s()}, \texttt{ode23t()} a \texttt{ode23tb()}. MATLAB obsahuje více metod, které jsou schopny řešit tuhé rovnice, například \texttt{ode45()}, nebo \texttt{ode113()}, ale tyto metody jsou označovány za pomalé a jsou primárně doporučovány k řešení netuhých diferenciálních rovnic \cite{MATLAB:2010}.
 
 Výsledky běhů simulace implementovaných modelů lze nalézt v kapitole \ref{srovnani-tuhy}. V této kapitole je také porovnání využitých nástrojů.
 
@@ -435,15 +441,15 @@ V této kapitole lze nalézt výsledky z experimentů a následné vyhodnocení 
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
-             & Rychlost výpočtu {[}s{]} &  &  \\ \hline
+             & Rychlost výpočtu {[}s{]} & Obtížnost implementace &  \\ \hline
 MATLAB       &                          &  &  \\ \hline
 GNU Octave   &                          &  &  \\ \hline
 SciLab       &                          &  &  \\ \hline
 Dymola       &                          &  &  \\ \hline
-OpenModelica &                          &  &  \\ \hline
-jModelica    &                          &  &  \\ \hline
-Scipy        &                          &  &  \\ \hline
-             &                          &  &  \\ \hline
+FreeMat &                          &  &  \\ \hline
+OpenModelica    &                          &  &  \\ \hline
+jModelica        &                          &  &  \\ \hline
+Scipy           &                          &  &  \\ \hline
 \end{tabular}
 \caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
 \label{tab:micek-tabulka}
@@ -457,15 +463,15 @@ Scipy        &                          &  &  \\ \hline
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
-             & Rychlost výpočtu {[}s{]} &  &  \\ \hline
+             & Rychlost výpočtu {[}s{]} & Obtížnost implementace &  \\ \hline
 MATLAB       &                          &  &  \\ \hline
 GNU Octave   &                          &  &  \\ \hline
 SciLab       &                          &  &  \\ \hline
 Dymola       &                          &  &  \\ \hline
-OpenModelica &                          &  &  \\ \hline
-jModelica    &                          &  &  \\ \hline
-Scipy        &       0.065              &  &  \\ \hline
-             &                          &  &  \\ \hline
+FreeMat &                          &  &  \\ \hline
+OpenModelica    &                          &  &  \\ \hline
+jModelica        &                     &  &  \\ \hline
+Scipy             &      0.065                    &  &  \\ \hline
 \end{tabular}
 \caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
 \label{tab:kruh-tabulka}
@@ -480,15 +486,15 @@ Scipy        &       0.065              &  &  \\ \hline
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
-             & Rychlost výpočtu {[}s{]} &  &  \\ \hline
+             & Rychlost výpočtu {[}s{]} & Obtížnost implementace &  \\ \hline
 MATLAB       &                          &  &  \\ \hline
 GNU Octave   &                          &  &  \\ \hline
 SciLab       &                          &  &  \\ \hline
 Dymola       &                          &  &  \\ \hline
-OpenModelica &                          &  &  \\ \hline
-jModelica    &                          &  &  \\ \hline
-Scipy        &                          &  &  \\ \hline
-             &                          &  &  \\ \hline
+FreeMat &                          &  &  \\ \hline
+OpenModelica    &                          &  &  \\ \hline
+jModelica        &                          &  &  \\ \hline
+ Scipy            &                          &  &  \\ \hline
 \end{tabular}
 \caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
 \label{tab:tuhy-tabulka}
